crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__exports_imports@test_programs_fibo_workflow.wasm_imports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: imports
---
{
  "obelisk:workflow/workflow-support@4.0.0.join-set-create": {
    "ffqn": "obelisk:workflow/workflow-support@4.0.0.join-set-create",
    "parameter_types": [],
    "return_type": {
      "NonExtendable": {
        "type_wrapper": "own",
        "wit_type": "join-set"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:fibo-obelisk-ext/fibo.fibo-await-next": {
    "ffqn": "testing:fibo-obelisk-ext/fibo.fibo-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "NonExtendable": {
        "type_wrapper": {
          "result": {
            "ok": {
              "tuple": [
                {
                  "record": {
                    "id": "string"
                  }
                },
                {
                  "result": {
                    "ok": "u64",
                    "err": null
                  }
                }
              ]
            },
            "err": {
              "variant": {
                "all-processed": null,
                "function-mismatch": {
                  "record": {
                    "actual-function": {
                      "option": {
                        "record": {
                          "function-name": "string",
                          "interface-name": "string"
                        }
                      }
                    },
                    "actual-id": {
                      "variant": {
                        "delay-id": {
                          "record": {
                            "id": "string"
                          }
                        },
                        "execution-id": {
                          "record": {
                            "id": "string"
                          }
                        }
                      }
                    },
                    "specified-function": {
                      "record": {
                        "function-name": "string",
                        "interface-name": "string"
                      }
                    }
                  }
                }
              }
            }
          }
        },
        "wit_type": "result<tuple<execution-id, result<u64>>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:fibo-obelisk-ext/fibo.fibo-submit": {
    "ffqn": "testing:fibo-obelisk-ext/fibo.fibo-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "NonExtendable": {
        "type_wrapper": {
          "record": {
            "id": "string"
          }
        },
        "wit_type": "execution-id"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:fibo/fibo.fibo": {
    "ffqn": "testing:fibo/fibo.fibo",
    "parameter_types": [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "Extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": false
  }
}
