crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__exports_imports@test_programs_fibo_workflow_component.wasm_exports_ext.snap
---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-nested-workflow-await-next": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      }
    ],
    {
      "type_wrapper": {
        "result": {
          "ok": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              "u64"
            ]
          },
          "err": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              {
                "variant": {
                  "nondeterminism": null,
                  "permanent-failure": "string",
                  "permanent-timeout": null
                }
              }
            ]
          }
        }
      },
      "wit_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "AwaitNext"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-nested-workflow-schedule": [
    [
      {
        "type_wrapper": {
          "variant": {
            "at": {
              "record": {
                "nanoseconds": "u32",
                "seconds": "u64"
              }
            },
            "in": {
              "variant": {
                "days": "u32",
                "hours": "u32",
                "milliseconds": "u64",
                "minutes": "u32",
                "seconds": "u64"
              }
            },
            "now": null
          }
        },
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Schedule"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-nested-workflow-submit": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Submit"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-start-fiboas-await-next": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      }
    ],
    {
      "type_wrapper": {
        "result": {
          "ok": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              "u64"
            ]
          },
          "err": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              {
                "variant": {
                  "nondeterminism": null,
                  "permanent-failure": "string",
                  "permanent-timeout": null
                }
              }
            ]
          }
        }
      },
      "wit_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "AwaitNext"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-start-fiboas-schedule": [
    [
      {
        "type_wrapper": {
          "variant": {
            "at": {
              "record": {
                "nanoseconds": "u32",
                "seconds": "u64"
              }
            },
            "in": {
              "variant": {
                "days": "u32",
                "hours": "u32",
                "milliseconds": "u64",
                "minutes": "u32",
                "seconds": "u64"
              }
            },
            "now": null
          }
        },
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "fiboas",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations-per-fiboa",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Schedule"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow-nesting.fibo-start-fiboas-submit": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "fiboas",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations-per-fiboa",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Submit"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-await-next": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      }
    ],
    {
      "type_wrapper": {
        "result": {
          "ok": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              "u64"
            ]
          },
          "err": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              {
                "variant": {
                  "nondeterminism": null,
                  "permanent-failure": "string",
                  "permanent-timeout": null
                }
              }
            ]
          }
        }
      },
      "wit_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "AwaitNext"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-concurrent-await-next": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      }
    ],
    {
      "type_wrapper": {
        "result": {
          "ok": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              "u64"
            ]
          },
          "err": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              {
                "variant": {
                  "nondeterminism": null,
                  "permanent-failure": "string",
                  "permanent-timeout": null
                }
              }
            ]
          }
        }
      },
      "wit_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "AwaitNext"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-concurrent-schedule": [
    [
      {
        "type_wrapper": {
          "variant": {
            "at": {
              "record": {
                "nanoseconds": "u32",
                "seconds": "u64"
              }
            },
            "in": {
              "variant": {
                "days": "u32",
                "hours": "u32",
                "milliseconds": "u64",
                "minutes": "u32",
                "seconds": "u64"
              }
            },
            "now": null
          }
        },
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Schedule"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-concurrent-submit": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Submit"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-schedule": [
    [
      {
        "type_wrapper": {
          "variant": {
            "at": {
              "record": {
                "nanoseconds": "u32",
                "seconds": "u64"
              }
            },
            "in": {
              "variant": {
                "days": "u32",
                "hours": "u32",
                "milliseconds": "u64",
                "minutes": "u32",
                "seconds": "u64"
              }
            },
            "now": null
          }
        },
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Schedule"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fiboa-submit": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Submit"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fibow-await-next": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      }
    ],
    {
      "type_wrapper": {
        "result": {
          "ok": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              "u64"
            ]
          },
          "err": {
            "tuple": [
              {
                "record": {
                  "id": "string"
                }
              },
              {
                "variant": {
                  "nondeterminism": null,
                  "permanent-failure": "string",
                  "permanent-timeout": null
                }
              }
            ]
          }
        }
      },
      "wit_type": "result<tuple<execution-id, u64>, tuple<execution-id, execution-error>>"
    },
    "AwaitNext"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fibow-schedule": [
    [
      {
        "type_wrapper": {
          "variant": {
            "at": {
              "record": {
                "nanoseconds": "u32",
                "seconds": "u64"
              }
            },
            "in": {
              "variant": {
                "days": "u32",
                "hours": "u32",
                "milliseconds": "u64",
                "minutes": "u32",
                "seconds": "u64"
              }
            },
            "now": null
          }
        },
        "name": "scheduled-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Schedule"
  ],
  "testing:fibo-workflow-obelisk-ext/workflow.fibow-submit": [
    [
      {
        "type_wrapper": "borrow",
        "name": "join-set-id",
        "wit_type": "join-set-id"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": {
        "record": {
          "id": "string"
        }
      },
      "wit_type": "execution-id"
    },
    "Submit"
  ],
  "testing:fibo-workflow/workflow-nesting.fibo-nested-workflow": [
    [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    {
      "type_wrapper": "u64",
      "wit_type": "u64"
    },
    null
  ],
  "testing:fibo-workflow/workflow-nesting.fibo-start-fiboas": [
    [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "fiboas",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations-per-fiboa",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": "u64",
      "wit_type": "u64"
    },
    null
  ],
  "testing:fibo-workflow/workflow.fiboa": [
    [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": "u64",
      "wit_type": "u64"
    },
    null
  ],
  "testing:fibo-workflow/workflow.fiboa-concurrent": [
    [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": "u64",
      "wit_type": "u64"
    },
    null
  ],
  "testing:fibo-workflow/workflow.fibow": [
    [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      },
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      }
    ],
    {
      "type_wrapper": "u64",
      "wit_type": "u64"
    },
    null
  ]
}
