crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__exports_imports@test_programs_fibo_workflow_component.wasm_imports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: imports
---
{
  "obelisk:types/join-set@6.0.0.[method]join-set.last-id": {
    "ffqn": "obelisk:types/join-set@6.0.0.[method]join-set.last-id",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "self",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "option<variant { execution-id(record { id: string }), delay-id(record { id: string }) }>",
        "wit_type": "option<response-id>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-dynamic-support@7.0.0.schedule-json": {
    "ffqn": "obelisk:workflow/workflow-dynamic-support@7.0.0.schedule-json",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      },
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "schedule-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "record { interface-name: string, function-name: string }",
        "name": "function",
        "wit_type": "function"
      },
      {
        "type_wrapper": "string",
        "name": "params",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<_, variant { ffqn-parsing-error(string), function-not-found, type-check-error(string), value-too-large(u64) }>",
        "wit_type": "result<_, schedule-json-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-dynamic-support@7.0.0.submit-json": {
    "ffqn": "obelisk:workflow/workflow-dynamic-support@7.0.0.submit-json",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "record { interface-name: string, function-name: string }",
        "name": "function",
        "wit_type": "function"
      },
      {
        "type_wrapper": "string",
        "name": "params",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<record { id: string }, variant { ffqn-parsing-error(string), function-not-found, type-check-error(string), value-too-large(u64) }>",
        "wit_type": "result<execution-id, submit-json-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@7.0.0.execution-id-generate": {
    "ffqn": "obelisk:workflow/workflow-support@7.0.0.execution-id-generate",
    "parameter_types": [],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@7.0.0.get-result-json": {
    "ffqn": "obelisk:workflow/workflow-support@7.0.0.get-result-json",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<option<string>, option<string>>, variant { execution-id-parsing-error(string), not-found-in-processed-responses }>",
        "wit_type": "result<result<option<string>, option<string>>, get-result-json-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@7.0.0.join-next": {
    "ffqn": "obelisk:workflow/workflow-support@7.0.0.join-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<option<string>, option<string>>, variant { all-processed }>",
        "wit_type": "result<result<option<string>, option<string>>, join-next-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@7.0.0.join-set-create": {
    "ffqn": "obelisk:workflow/workflow-support@7.0.0.join-set-create",
    "parameter_types": [],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "own",
        "wit_type": "join-set"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:fibo-obelisk-ext/fibo.fibo-await-next": {
    "ffqn": "testing:fibo-obelisk-ext/fibo.fibo-await-next",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<u64>, variant { all-processed, function-mismatch(record { specified-function: record { interface-name: string, function-name: string }, actual-function: option<record { interface-name: string, function-name: string }>, actual-id: variant { execution-id(record { id: string }), delay-id(record { id: string }) } }) }>",
        "wit_type": "result<result<u64>, await-next-extension-error>"
      }
    },
    "extension": "await_next",
    "submittable": false
  },
  "testing:fibo-obelisk-ext/fibo.fibo-submit": {
    "ffqn": "testing:fibo-obelisk-ext/fibo.fibo-submit",
    "parameter_types": [
      {
        "type_wrapper": "borrow",
        "name": "join-set",
        "wit_type": "borrow<join-set>"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<record { id: string }, variant { function-not-found, type-check-error(string), value-too-large(u64) }>",
        "wit_type": "result<execution-id, child-execution-request-error>"
      }
    },
    "extension": "submit",
    "submittable": false
  },
  "testing:fibo/fibo.fibo": {
    "ffqn": "testing:fibo/fibo.fibo",
    "parameter_types": [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": false
  }
}
